# collaboard-inc

./: .gitignore  README.md  example_env.txt  pyproject.toml
collaboard/: manage.py  utils.py
collaboard/applications/: utils.py
collaboard/applications/authentication/: apps.py  forms.py  models.py  services.py  urls.py  views.py
collaboard/applications/authentication/migrations/: 0001_initial.py  0002_customuser_is_verified.py  0003_remove_customuser_is_verified.py
collaboard/applications/authentication/static/authentication/: email_verified.css  forgot-password.css  login.css  reset-password.css  signup.css  verify_account_email_sent.css
collaboard/applications/authentication/templates/authentication/: email_verified.html  forgot-password-email.html  forgot-password.html  login.html  reset-password.html  signup.html  verify_account_email_sent.html
collaboard/applications/meeting/: admin.py  apps.py  models.py  services.py  urls.py  views.py
collaboard/applications/meeting/migrations/: 0001_initial.py  0002_meeting_access_code.py  0003_question_index.py  0004_alter_meeting_duration.py
collaboard/applications/meeting/static/meeting/: create_meeting.css  create_meeting.js  end_meeting.css  host_meeting.css  locked_meeting.css
collaboard/applications/meeting/templates/meeting/: create_meeting.html  end_meeting.html  host_meeting.html  locked_meeting.html
collaboard/apps/authentication/: forms.py  urls.py  views.py
collaboard/apps/authentication/static/authentication/: forgot-password.css  login.css  reset-password.css  signup.css
collaboard/apps/authentication/templates/authentication/: forgot-password-email.html  forgot-password.html  (+3 more)
collaboard/collaboard/: asgi.py  settings.py  urls.py  views.py  wsgi.py
collaboard/static/: account.css  dashboard.css  index.css  navbar_guest.css  navbar_user.css
collaboard/templates/: 403.html  404.html  500.html  account.html  dashboard.html  index.html  navbar_guest.html  navbar_user.html
collaboard/templates/emails/: verify_account_email.html
